# blaze

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  matrix_includes.json
blazecrab/: Cargo.toml
blazecrab/src/: main.rs
blazecrab/src/crabs/: container.rs  creds.rs  host.rs  mod.rs  netstat.rs
blazecrab/src/crabs/db/: mod.rs  mysql.rs  postgres.rs
blazecrab/src/crabs/web/: httpd.rs  mod.rs  nginx.rs
blazectl/: Cargo.toml
blazectl/scripts/: basewall.sh  boxcrab.sh  chpass.sh  firewall_template.sh  k8s-solver  ssh.sh
blazectl/src/: config.rs  main.rs  repl.rs  scripts.rs
blazectl/src/proto/: mod.rs  ssh.rs
blazectl/src/run/: chpass.rs  config.rs  mod.rs  pass.rs  profile.rs  scan.rs  script.rs
blazed/: Cargo.toml  blaze.db
blazed/.sqlx/: query-01447b7416515f32d9b144dc30d85b94e265aba9869bc4e74d95072081d62b47.json  query-09eed88ab409f4e7c4a5de3c1628e3b8e73673686cf3baae44de2cbaf3d914f1.json  query-1a11cd8939763cce1cb3bc9ec0071f8e0ed9c067f0900d575a4a0d95a7f0bfbe.json  query-2ad4fbd9c5b8f006bd18ca4264ba6575c447ab65c6f6a59be5b29a31011faa6e.json  query-6afedd28530be41d5faf1a8e3879b491249e93bd2295eeff1897c90cbb602f73.json  query-7250dccf7e6a98153cf1f744c5e6e47c0399f1007c562c42aef1b0a964ab308b.json  query-73843d619db72cb85b0b37dd602b671b5332d153d31e722e5dbbce9da54dadc1.json  query-84cc9103b64185e39b4006670366b566a94ed1d6705b9efa283ea9052da14194.json  query-a556d18ca8b1f008a9d879a063394c5c68e3d8bcced2d40070ce9fcd226b5455.json  query-ca6d05084cb5de534304956d1a37548977dea87c84b5f23f1e65ba279c209856.json  query-f083d69d030ddc0ad1a1a97cc57ade8518aecf4f4362f10586efbf111b1a9825.json  query-f78a90b1d799236515e3ecc423961aa3cd0375ad963749c6860042657275da1f.json
blazed/migrations/: 20250211_blaze.sql
blazed/src/: main.rs
blazed/src/models/: mod.rs
blazed/src/routes/: mod.rs
blazeweb/: .gitignore  package.json  vite.config.ts
blazeweb/src/routes/: +layout.svelte  +page.svelte  +page.ts
blazeweb/src/routes/passwords/: +page.svelte  +page.ts
blazeweb/src/routes/services/: +page.svelte  +page.ts
scripts/: basewall.sh  chpass.sh  extract_fw_logs.sh  find_dc.sh  fw.sh  hostname.sh  ident.sh  lockdown.sh  parse_fw_logs.sh  rm_fw.sh
src/: config.rs  ldap.rs  main.rs  nmap.rs  rdp.rs  repl.rs  run.rs  scan.rs  scripts.rs  ssh.rs
src/proto/: ldap.rs  rdp.rs  ssh.rs
src/run/: chpass.rs  config.rs  ldap.rs  mod.rs  profile.rs  scan.rs  script.rs
src/util/: ip.rs  mod.rs  strings.rs
tools/: Makefile  go.mod
tools/cmd/fw/: main.go
