[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
nmap_xml_parser = "0.3.0"
ratatui = { version = "0.29.0", features = ["termion", "underline-color"], default-features = false }
russh = "0.46.0"
russh-keys = "0.46.0"
russh-sftp = "2.0.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
termion = "4.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-fd = "0.3.0"
