[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle-wincon = "=3.0.3"
anyhow = "1.0.93"
async-trait = "0.1.83"
cidr = "0.3.0"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
nmap_xml_parser = "0.3.0"
rand = "0.8.5"
russh = "0.46.0"
russh-keys = "0.46.0"
russh-sftp = "2.0.6"
rustscan = "2.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["full"] }
