[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle-wincon = "=3.0.3"
anyhow = "1.0.93"
async-trait = "0.1.83"
cidr = { version = "0.3.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = { version = "4.5.42", features = ["unstable-dynamic"] }
crossterm = "0.28.1"
csv = "1.3.1"
env_logger = "0.11.6"
hickory-resolver = "0.24.2"
humantime = "2.1.0"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
libc = "0.2.169"
log = "0.4.25"
nmap_xml_parser = "0.3.0"
rand = "0.8.5"
russh = "0.46.0"
russh-keys = "0.46.0"
russh-sftp = "2.0.6"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
rustls = "0.23.21"
rustscan = "2.3.0"
rustyline = { version = "15.0.0", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shlex = "1.3.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.1"
x509-parser = "0.16.0"
