[package]
name = "blazecrab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bollard = "0.18.1"
env_logger = "0.11.6"
in-container = "1.1.0"
itertools = "0.14.0"
log = "0.4.25"
mysql = "26.0.0"
netstat2 = "0.11.1"
regex-automata = "0.4.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
