[package]
name = "blazed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
cidr = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "json", "migrate"] }
tokio = { version = "1.43.0", features = ["full"] }
